End of part 9 - Building the User Profile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     //BottomNavigationViewEx Library
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
 
+    //Circle ImageView Library
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
 }
