--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name="com.team06.InstagramClone.Profile.ProfileActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Search.SearchActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Share.ShareActivity"></activity>
+        <activity android:name="com.team06.InstagramClone.Profile.AccountSettingsActivity"></activity>
+
 
     </application>
 
