--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     //Circle ImageView Library
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
+    //Universal Image Loader Library
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 }
