End of part 20 - Testing Firebase Authentication (I coded a few things differently than in the video --> I followed the firebase instructions as I am using a different version of firebase than the video)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name="com.team06.InstagramClone.Search.SearchActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Share.ShareActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Profile.AccountSettingsActivity"></activity>
+        <activity android:name="com.team06.InstagramClone.Login.LoginActivity"></activity>
+        <activity android:name="com.team06.InstagramClone.Login.RegisterActivity"></activity>
 
 
     </application>
