--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.team06.freehand"
+        applicationId "com.team06.InstagramClone"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -41,6 +41,9 @@ dependencies {
 
     //firebase
     compile 'com.google.firebase:firebase-core:11.8.0'
+
+    //firebase authentication
+    compile 'com.google.firebase:firebase-auth:11.8.0'
 
 }
 
