--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.google.gms:google-services:3.2.0' //firebase
+        classpath 'com.google.gms:google-services:3.2.0' //google services plugin
     }
 }
 
@@ -22,6 +22,9 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
 }
 
