--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     //firebase authentication
     compile 'com.google.firebase:firebase-auth:11.8.0'
 
+    //firebase database
+    compile 'com.google.firebase:firebase-database:11.8.0'
+
 }
 
 //firebase
