End of part 48 - Selected Image to Share

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name="com.team06.InstagramClone.Profile.AccountSettingsActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Login.LoginActivity"></activity>
         <activity android:name="com.team06.InstagramClone.Login.RegisterActivity"></activity>
+        <activity android:name="com.team06.InstagramClone.Share.NextActivity"></activity>
 
 
     </application>
